color corrections and border spacings

--- a/assignment1/files/css/styles.css
+++ b/assignment1/files/css/styles.css
@@ -12,6 +12,7 @@ body {
 }
 
 a, a:visited {
+	color: #222222;
 	text-decoration: none;
 }
 header{
@@ -32,16 +33,19 @@ header{
 
 .logo{
 	padding-top: 100px;
+	padding-bottom: 100px:;
 	/*margin:100px auto 75px auto;*/
 }
 
 .nav{
 	text-transform: uppercase;
-	margin-right: 50px;
+	margin: 100px 200px auto 200px;
+	border-top: 1px #c0c0c0 solid;
+
 }
 
 .nav li{
-	padding: auto 15px auto 15px; 
+	padding: 25px; 
 }
 .nav ul li{
 	list-style: none;
@@ -56,6 +60,12 @@ header{
 	margin: 0 auto 800px auto; 
 	padding: 15px;
 }
+
+.content a{
+	color: #e03d43;
+
+}
+
 .content ul{
 	list-style-type: none;
 }
@@ -72,15 +82,16 @@ header{
 .three{
 	padding-top: 100px;
 	margin-left: 20%;
-	margin-right:20%; 
+	margin-right:20%;
+	border-top: 1px #c0c0c0 solid; 
 
 }
 .product{
-	box-sizing: border-box;
 	padding: 75px auto 75px auto;
 	float:left;
 	display:inline;
 	margin:auto 15px auto 15px;
+	border-top:;
 }
 .product p{
 	text-align:center;
